--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <img src="./img/pipe.png" class="pipe">
     </div>
 
+     <div class="score">Pontuação: <span id="score">0</span></div>
+ <div class="game-over"><h1>Game Over</h1><button onclick="restartGame()">Reiniciar</button>
+    </div>
+    
     <script src="main.js"></script>
   </body>
 </html>  
